make requests protected
